added historyApiFallback; added auth sign_in page; refactored some code;

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+  <link rel="icon" sizes="192x192" href="/images/touch/chrome-touch-icon-192x192.png">
 
   <!-- Add to homescreen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Material Design Lite">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
   <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
@@ -31,13 +31,13 @@
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
+  <!-- build:css({.tmp/serve,src}) /styles/vendor.css -->
   <!-- bower:css -->
   <!-- run `gulp inject` to automatically populate bower styles dependencies -->
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:css({.tmp/serve,src}) styles/app.css -->
+  <!-- build:css({.tmp/serve,src}) /styles/app.css -->
   <!-- inject:css -->
   <!-- css files will be automatically insert here -->
   <!-- endinject -->
@@ -52,12 +52,12 @@
 
 <layout/>
 
-<!-- build:js(src) scripts/vendor.js -->
+<!-- build:js(src) /scripts/vendor.js -->
 <!-- bower:js -->
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js({.tmp/serve,.tmp/partials}) scripts/app.js -->
+<!-- build:js({.tmp/serve,.tmp/partials}) /scripts/app.js -->
 <!-- inject:js -->
 <!-- js files will be automatically insert here -->
 <!-- endinject -->
